--- a/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
@@ -1,16 +1,15 @@
 
 
-<div
-	ng-init="guests=[
+
+	<div class="panel panel-info " ng-init="guests=[
 {Nom:'MoreL',Prenom:'Brice', Adresse:'24 rue Emile blandin 44400 REZE', Email:'brice_morle@hotmail.com'},
 {Nom:'dsvsv',Prenom:'dsvsv', Adresse:'24 rue Emile blandin 44400 REZE', Email:'brice_morle@hotmail.com'},
 {Nom:'MorsdvsveL',Prenom:'sdvdsvdsvdssdvdsvdsvd', Adresse:'24 rue Emile blandin 44400 REZE', Email:'brice_morle@hotmail.com'}
 ]
 ">
-	<div class="panel panel-info" layout="colomn">
 
 		<!-- Default panel contents -->
-		<div class="panel-heading" flex>
+		<div class="panel-heading" >
 			<span class="lead">Nouveaux Clients en attente d'affectation </span>
 		</div>
 		<!-- Tableau d'affichage des demandes d'ouverture -->
@@ -19,7 +18,7 @@
 
 
 
-		<div class="panel-body" flex>
+		<div class="panel-body" >
 			<div class="tablecontainer">
 				<table class="table table-hover">
 					<thead>
@@ -57,5 +56,4 @@
 			</div>
 		</div>
 	</div>
-</div>
 
