--- a/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
@@ -1,14 +1,15 @@
 
-<div id="printSectionId">
-	<div class="panel panel-info" layout="colomn">
+
+	<div class="panel panel-info" >
 
 			<!-- Default panel contents -->
-			<div class="panel-heading" flex>
+			<div class="panel-heading" >
 				<span class="lead">Liste des Comptes </span>
+				
 			</div>
 
 
-			<div class="panel-body" flex>
+			<div class="panel-body" >
 				<div class="tablecontainer">
 					<table class="table table-hover">
 						<thead>
@@ -29,6 +30,4 @@
 				</div>
 			</div>
 		</div>
-	</div>
 
-<button ng-click="printToCart('ctrl.printSectionId')" class="button">Imprimer</button>
