--- a/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
@@ -1,56 +1,58 @@
 
-	<!-- Tableau d'affichage des conseillers -->
+<!-- Tableau d'affichage des conseillers -->
+
+
+
+
+	<div class="panel panel-info" ng-init="ctrl.recherche_userParType(2);">
+
+		<!-- Default panel contents -->
+		<div class="panel-heading">
+			<span class="lead">Liste des conseillers</span>
+		</div>
+		<!-- Tableau d'affichage des demandes d'ouverture -->
 
 
 
 
 
-	<div ng-init="ctrl.recherche_userParType(2);">
-<div class="panel panel-info" layout="colomn">
+		<div class="panel-body">
+			<div class="tablecontainer">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th ng-click="ctrl.trier_par('nom')">Nom <img
+								class="icone_liste" src="static/imgs/flecheHaut.png"
+								ng-hide="flechetri_1" ng-click="flechetri_1 = !flechetri_1" />
+								<img class="icone_liste" src="static/imgs/flecheBas.png"
+								ng-hide="!flechetri_1" ng-click="flechetri_1 = !flechetri_1" /></th>
+							<th ng-click="ctrl.trier_par('prenom')">Prenom</th>
+							<th ng-click="ctrl.trier_par('adresse')">Adresse</th>
+							<th width="10%" ng-click="ctrl.trier_par()">Editer</th>
+							<th width="10%" ng-click="ctrl.trier_par()">Supprimer</th>
 
-	<!-- Default panel contents -->
-	<div class="panel-heading" flex>
-		<span class="lead">Liste des conseillers</span>
-	</div>	
-	<!-- Tableau d'affichage des demandes d'ouverture -->
-
-
-
-
-
-			<div class="panel-body" flex>
-				<div class="tablecontainer">
-					<table class="table table-hover">
-						<thead>
-							<tr>
-								<th ng-click="ctrl.trier_par('nom')">Nom <img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_1" ng-click="flechetri_1 = !flechetri_1" /> <img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_1" ng-click="flechetri_1 = !flechetri_1" /></th>
-								<th ng-click="ctrl.trier_par('prenom')">Prenom</th>
-								<th ng-click="ctrl.trier_par('adresse')">Adresse</th>
-								<th width="10%" ng-click="ctrl.trier_par()">Editer</th>
-								<th width="10%" ng-click="ctrl.trier_par()">Supprimer</th>
-
-							</tr>
-						</thead>
-						<tbody>
-							<tr ng-repeat="Conseiller in Conseillers | filter:search:strict | orderBy:tripar ">
-								<td>{{Conseiller.nom}}</td>
-								<td>{{Conseiller.prenom}}</td>
-								<td>{{Conseiller.adresse}}</td>
-								<td>
-<!-- <a href="#/admin/Admin_EditCons?{{Conseiller.id}}"> -->								
-<img class="icone_liste" src="static/imgs/crayon.png" ng-click="redir_edit_cons()" />
-</a>
-									</td>
-								<td>
-<!--<a href="#/admin/Admin_DelCons?{{Conseiller.id}}"> -->
-<img class="icone_liste" src="static/imgs/delete.png" ng-click="redir_delete_cons()" />
-</a>
-									</td>									
-							</tr>
-						</tbody>
-					</table>
-				</div>
+						</tr>
+					</thead>
+					<tbody>
+						<tr
+							ng-repeat="Conseiller in Conseillers | filter:search:strict | orderBy:tripar ">
+							<td>{{Conseiller.nom}}</td>
+							<td>{{Conseiller.prenom}}</td>
+							<td>{{Conseiller.adresse}}</td>
+							<td>
+								<!-- <a href="#/admin/Admin_EditCons?{{Conseiller.id}}"> --> <img
+								class="icone_liste" src="static/imgs/crayon.png"
+								ng-click="redir_edit_cons()" /> </a>
+							</td>
+							<td>
+								<!--<a href="#/admin/Admin_DelCons?{{Conseiller.id}}"> --> <img
+								class="icone_liste" src="static/imgs/delete.png"
+								ng-click="redir_delete_cons()" /> </a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
-</div>
-</div>
+		</div>
+	</div>
 
