--- a/GBriceCorp/src/main/webapp/static/views/Cons_RechCpt.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_RechCpt.html
@@ -2,22 +2,20 @@
 
 <!-- Tableau d'affichage des comptes -->
 
-<div
-	ng-init="Comptes=[
+	<div class="panel panel-info" ng-init="Comptes=[
 {Iban:'1564567641654', Nom:'MoreL',Prenom:'Brice', Solde:'5800'},
 {Iban:'54354345354', Nom:'dfgfdg',Prenom:'Tangi', Solde:'580'},
 {Iban:'4534534537783', Nom:'ModfgdfreL',Prenom:'Nicolas', Solde:'800'},
 {Iban:'4537873783783', Nom:'dfgdfgsdfg',Prenom:'bernard', Solde:'50'},
 {Iban:'7837838354', Nom:'dfgdfsgdfgdfgsdfgdf',Prenom:'dfgfdgfd', Solde:'378'}
 ]">
-	<div class="panel panel-info" layout="colomn">
 
 		<!-- Default panel contents -->
-		<div class="panel-heading" flex>
+		<div class="panel-heading" >
 			<span class="lead">Liste des comptes</span>
 		</div>
 
-		<div class="panel-body" flex>
+		<div class="panel-body" >
 			<div class="tablecontainer">
 				<table class="table table-hover">
 					<thead>
@@ -42,5 +40,4 @@
 			</div>
 		</div>
 	</div>
-</div>
 
