--- a/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
+++ b/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
@@ -1,159 +1,124 @@
 
 
-<!-- Formulaire d'inscription -->
+
+	<!-- Formulaire d'inscription -->
 
 
 
-<div class="panel panel-info" layout="colomn">
+	<div class="panel panel-info" >
 
-	<!-- Default panel contents -->
-	<div class="panel-heading" flex>
-		<span class="lead">Demande d'ouverture d'un compte courant</span>
-	</div>
+		<!-- Default panel contents -->
+		<div class="panel-heading" >
+			<span class="lead">Demande d'ouverture d'un compte courant</span>
+		</div>
 
-	<!-- action="envoiMailConfirmation.php"-->
-	<div class="panel-body" flex>
-		<div class="formcontainer">
-			<form ng-submit="ctrl.submit()" name="formIscription"
-				class="form-horizontal" method="post">
-				<input type="hidden" ng-model="ctrl.user.id" />
-				<div class="row">
-					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Prenom</label>
-						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.user.prenom" name="prenom"
-								class="form-control input-sm" placeholder="Entez votre prenom"
-								required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.prenom.$error.required">Champ
-									obligatoire</span>
+		<!-- action="envoiMailConfirmation.php"-->
+		<div class="panel-body" >
+			<div class="formcontainer">
+				<form ng-submit="ctrl.submit()" name="formIscription"
+					class="form-horizontal" method="post">
+					<input type="hidden" ng-model="ctrl.user.id" />
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="file">Prenom</label>
+							<div class="col-md-7">
+								<input type="text" ng-model="ctrl.user.prenom" name="prenom"
+									class="form-control input-sm" placeholder="Entez votre prenom"
+									required />
+								<div class="has-error" ng-show="formInscription.$dirty">
+									<span ng-show="formConnexion.prenom.$error.required">Champ
+										obligatoire</span>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Nom</label>
-						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.user.nom" name="nom"
-								class="form-control input-sm" placeholder="Entrez votre prenom"
-								required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.nom.$error.required">Champ
-									obligatoire</span>
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="file">Nom</label>
+							<div class="col-md-7">
+								<input type="text" ng-model="ctrl.user.nom" name="nom"
+									class="form-control input-sm" placeholder="Entrez votre prenom"
+									required />
+								<div class="has-error" ng-show="formInscription.$dirty">
+									<span ng-show="formConnexion.nom.$error.required">Champ
+										obligatoire</span>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Telephone</label>
-						<div class="col-md-7">
-							<input type="tel" ng-model="ctrl.user.telephone" name="telephone"
-								class="form-control input-sm"
-								placeholder="Entez votre telephone" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.telephone.$error.required">Champ
-									obligatoire</span>
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="file">Telephone</label>
+							<div class="col-md-7">
+								<input type="tel" ng-model="ctrl.user.telephone"
+									name="telephone" class="form-control input-sm"
+									placeholder="Entez votre telephone" required />
+								<div class="has-error" ng-show="formInscription.$dirty">
+									<span ng-show="formConnexion.telephone.$error.required">Champ
+										obligatoire</span>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Adresse
-							mail</label>
-						<div class="col-md-7">
-							<input type="email" ng-model="ctrl.user.mail" name="mail"
-								class="form-control input-sm" placeholder="Entrez votre email"
-								required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.email.$error.required">Champ
-									obligatoire</span>
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="file">Adresse
+								mail</label>
+							<div class="col-md-7">
+								<input type="email" ng-model="ctrl.user.mail" name="mail"
+									class="form-control input-sm" placeholder="Entrez votre email"
+									required />
+								<div class="has-error" ng-show="formInscription.$dirty">
+									<span ng-show="formConnexion.email.$error.required">Champ
+										obligatoire</span>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 
 
-				<div class="row">
-					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Adresse
-							postale</label>
-						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.user.adresse" name="adresse"
-								class="form-control input-sm" placeholder="Entrez votre adresse"
-								required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.adresse.$error.required">Champ
-									obligatoire</span>
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="file">Adresse
+								postale</label>
+							<div class="col-md-7">
+								<input type="text" ng-model="ctrl.user.adresse" name="adresse"
+									class="form-control input-sm"
+									placeholder="Entrez votre adresse" required />
+								<div class="has-error" ng-show="formInscription.$dirty">
+									<span ng-show="formConnexion.adresse.$error.required">Champ
+										obligatoire</span>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Code
-							Postal</label>
-						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.user.codepostal"
-								name="codepostal" class="form-control input-sm"
-								placeholder="Entez votre codepostal" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.codepostal.$error.required">Champ
-									obligatoire</span>
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="file">Code
+								Postal</label>
+							<div class="col-md-7">
+								<input type="text" ng-model="ctrl.user.codepostal"
+									name="codepostal" class="form-control input-sm"
+									placeholder="Entez votre codepostal" required />
+								<div class="has-error" ng-show="formInscription.$dirty">
+									<span ng-show="formConnexion.codepostal.$error.required">Champ
+										obligatoire</span>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 
 
-				<div class="row">
-					<div class="form-actions ">
-						<a href="#/" class="btn btn-warning btn-sm floatLeft"> Retour
-						</a> <input type="submit" value="Connexion"
-							class="btn btn-primary btn-sm floatRight"
-							ng-disabled="formConnexion.$invalid">
+					<div class="row">
+						<div class="form-actions ">
+							<a href="#/" class="btn btn-warning btn-sm floatLeft"> Retour
+							</a> <input type="submit" value="Connexion"
+								class="btn btn-primary btn-sm floatRight"
+								ng-disabled="formConnexion.$invalid">
+						</div>
 					</div>
-				</div>
-			</form>
+				</form>
+			</div>
 		</div>
 	</div>
-</div>
-<div class="panel panel-default">
-	<!-- Default panel contents -->
-	<div class="panel-heading">
-		<span class="lead">Liste des utilisateurs </span>
-	</div>
-	<div class="tablecontainer">
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th>ID.</th>
-					<th>Prenom</th>
-					<th>Nom</th>
-					<th>Adresse</th>
-					<th>Codepostal</th>
-					<th>Email</th>
-					<th width="20%"></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat="u in ctrl.users">
-					<td><span ng-bind="u.id"></span></td>
-					<td><span ng-bind="u.prenom"></span></td>
-					<td><span ng-bind="u.nom"></span></td>
-					<td><span ng-bind="u.adresse"></span></td>
-					<td><span ng-bind="u.codepostal"></span></td>
-					<td><span ng-bind="u.mail"></span></td>
-					<td>
-						<button type="button" ng-click="ctrl.edit(u.id)"
-							class="btn btn-success custom-width">Modifier</button>
-						<button type="button" ng-click="ctrl.remove(u.id)"
-							class="btn btn-danger custom-width">Supprimer</button>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-</div>
+
