--- a/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
+++ b/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
@@ -15,9 +15,10 @@
 		<!-- action="envoiMailConfirmation.php"-->
 		<div class="panel-body" >
 			<div class="formcontainer">
-				<form ng-submit="ctrl.submit()" name="formIscription"
+				<form ng-submit="ctrl.inscription_Client()" name="formIscription"
 					class="form-horizontal" method="post">
 					<input type="hidden" ng-model="ctrl.user.id" />
+					<input type="hidden" ng-model="ctrl.user.typeUser" />					
 					<div class="row">
 						<div class="form-group col-md-12">
 							<label class="col-md-2 control-lable" for="file">Prenom</label>
@@ -112,7 +113,7 @@
 					<div class="row">
 						<div class="form-actions ">
 							<a href="#/" class="btn btn-warning btn-sm floatLeft"> Retour
-							</a> <input type="submit" value="Connexion"
+							</a> <input type="submit" value="Valider"
 								class="btn btn-primary btn-sm floatRight"
 								ng-disabled="formConnexion.$invalid">
 						</div>
