Reajustement pour affichage des conseillers : un probleme subsiste.

--- a/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
@@ -4,7 +4,7 @@
 
 
 
-	<div class="panel panel-info" ng-init="ctrl.recherche_userParType(2);">
+	<div class="panel panel-info" ng-init="ctrl.getListeCons();">
 
 		<!-- Default panel contents -->
 		<div class="panel-heading">
