intégration du virement

--- a/GBriceCorp/src/main/webapp/static/views/Cli_DemDecouvert.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_DemDecouvert.html
@@ -3,7 +3,7 @@
  -->
 
 
-	<form ng-submit="CompteController.writeDemDecou()">
+	<form ng-submit="writeDemDecou()">
 		<div class="panel panel-info" layout="colomn">
 
 			Quel decouvert souhaiteriez vous avoir? (attention ce montant ne peut
