--- a/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
@@ -1,6 +1,6 @@
 
 
-	<div class="panel panel-info" >
+	<div class="panel panel-info" ng-init="getComptes()">
 
 			<!-- Default panel contents -->
 			<div class="panel-heading" >
