modifs sur code de tangi pour que ca marche

--- a/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
@@ -35,7 +35,7 @@
 					</thead>
 					<tbody>
 						<tr
-							ng-repeat="Conseiller in Conseillers | filter:search:strict | orderBy:tripar ">
+							ng-repeat="Conseiller in cons_admin | filter:search:strict | orderBy:tripar ">
 							<td>{{Conseiller.nom}}</td>
 							<td>{{Conseiller.prenom}}</td>
 							<td>{{Conseiller.adresse}}</td>
