--- a/GBriceCorp/src/main/webapp/static/views/Cli_DemDecouvert.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_DemDecouvert.html
@@ -10,7 +10,7 @@
 			pas exceder 40% de vos revenus mensuels) <input type="text"
 				ng-model="ctrl.user.decouvert" name="demDecouvert"
 				class="username form-control input-sm"
-				placeholder="Saisir la valeur souhaitée" required />
+				placeholder="Saisir la valeur souhaitee" required />
 			<div class="row">
 				<div class="form-actions floatRight">
 					<input type="submit" value="Soumettre ma demande à mon conseiller"
